--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 /* Header styles */
 header {
-    background-color: #a9b4a9;
+    background-color: #565b56;
     color: white;
     text-align: center;
     padding: 20px;
