--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 /* Header styles */
 header {
-    background-color: #565b56;
+    background-color: #333;
     color: white;
     text-align: center;
     padding: 20px;
